--- a/skeleton.html
+++ b/skeleton.html
@@ -62,7 +62,7 @@
                 <div class="container">
                     <div class="row py-5 align-items-center">
                         <div class="col-md-6 col-lg-7">
-                            <svg loading="lazy" class="img-fluid bg-light" xmlns="img/Gráfico (módulo digital)_Mesa de trabajo 1.svg" alt="Gráfico de porcentaje de áreas silvestres amenazadas por perros" />
+                            <img loading="lazy" class="img-fluid bg-light" src="img/Gráfico (módulo digital)_Mesa de trabajo 1.svg" alt="Gráfico de porcentaje de áreas silvestres amenazadas por perros" />
                         </div>
                         <div class="col-md-6 col-lg-5 p-4">
                             <h3><i data-feather="circle"></i> Animales domésticos pueden llegar a afectar gravemente a especies de áreas protegidas de nuestro país.</h3>
