--- a/index.html
+++ b/index.html
@@ -33,12 +33,14 @@
                             <img loading="lazy" class="img-fluid bg-light d-none d-lg-block" src="img/parques-nacionales-chile-3.jpg" alt="describa la imagen" />
                         </div>
                         <div class="col-md-6 col-lg-5 p-4">
-                            <h3><i data-feather="heart"></i> Áreas protegidas</h3>
+                            <h3><i data-feather="camera"></i> Áreas protegidas</h3>
                             <p>
                                 “Son territorios protegidos legalmente que tienen la finalidad de asegurar la diversidad biológica, amparar la preservación de la naturaleza o conservar el patrimonio ambiental” (MMA, 2020)
                             </p>
-                            <p class="small d-none d-lg-block">
+                              <p class="small d-none d-lg-block">
+                                En la pantalla pequeña la imagen es cuadrada. En la pantalla mediana es rectangular y apaisada, con lados en <a href="https://es.wikipedia.org/wiki/Relaci%C3%B3n_de_aspecto">relación de aspecto</a> 4:3. En la pantalla grande la relación es 16:9
                             </p>
+                       
                         </div>
                     </div>
                 </div>
@@ -59,12 +61,14 @@
                             </div>
                         </div>
                         <div class="col-md-6 col-lg-5 p-4 text-md-right order-sm-first">
-                            <h3><i data-feather="book-open"></i> Normativa Perros y otras mascotas al interior de Áreas Silvestres Protegidas</h3>
+                            <h3><i data-feather="film"></i> Normativa Perros y otras mascotas al interior de Áreas Silvestres Protegidas</h3>
                             <p>
                                La Normativa para el manejo de perros y otras mascotas en las Áreas Silvestres Protegidas, administradas por CONAF, es un documento que busca regular la forma en que el personal de la institución, así como los visitantes, poblaciones humanas aledañas y demás personas e instituciones relacionadas con el tema, deben conducirse al interior  de cualquier parque nacional, reserva nacional o monumento natural y otras áreas protegidas, en relación a la presencia y tenencia de animales domésticos (perros, gatos  y otros). 
                             </p>
-                            <p class="small d-none d-lg-block">
+                              <p class="small d-none d-lg-block">
+                                En YouTube busquen el botón de compartir. Al presionarlo, aparece una ventana. Seleccionen la opción "insertar". Copien el código. Luego reemplacen en ancho y alto por la clase de Bootstrap.
                             </p>
+                       
                         </div>
                     </div>
                 </div>
@@ -74,15 +78,16 @@
                 <div class="container">
                     <div class="row py-5 align-items-center">
                         <div class="col-md-6 col-lg-7">
-                            <svg version="1.1" id="ilustracion" xmlns="Gráfico (módulo digital)_Mesa de trabajo 1.svg" xmlns:xlink="Gráfico (módulo digital)_Mesa de trabajo 1.svg" x="0px" y="0px" viewBox="0 0 800 450" xml:space="preserve">
+                            <svg version="1.1" id="ilustracion" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 800 450" xml:space="preserve">
                                 <circle cx="400" cy="225" r="35" />
                             </svg>
                         </div>
                         <div class="col-md-6 col-lg-5 p-4">
-                            <h3><i data-feather="alert-triangle"></i> Animales domésticos pueden llegar a afectar gravemente a especies de áreas protegidas de nuestro país. </h3>
+                            <h3><i data-feather="pen-tool"></i> Animales domésticos pueden llegar a afectar gravemente a especies de áreas protegidas de nuestro país. </h3>
                             <p>
                                 Existe tanto un peligro en los instintos que tiene el animal como el orinar o defecar en distintas plantas y los ataques a otros animales y sus hábitats seguros, como un riesgo de transmisión de enfermedades letales. Es de suma importancia concientizar sobre problemáticas cotidianas para comenzar a generar una conversación a nivel individual y comunitario. Este es un tema poco conocido por la mayoría de los dueños de perros y que sigue siendo un hecho que ocurre diariamente.                             </p>
-                            <p class="small d-none d-lg-block">
+                             <p class="small d-none d-lg-block">
+                                Si revisan el código fuente, podrán notar que el gráfico mantiene una proporción definida con <a href="https://developer.mozilla.org/en-US/docs/Web/SVG/Attribute/viewBox">viewBox</a>, y con ella se adapta a cualquier condición de pantalla.
                             </p>
                         </div>
                     </div>
@@ -110,7 +115,7 @@
                 <div class="container">
                     <div class="row py-4">
                         <div class="col-10 mx-auto mb-5 text-center">
-                            <p><i data-feather="smile"></i></p>
+                            <p><i data-feather="activity"></i></p>
                             <p class="lead">
                                 ¿Vas a seguir llevando a tu perro al cerro? Te invitamos a unirte a este compromiso para que junto a tu mascota puedan proteger a nuestra flora y fauna silvestre. 
                             </p>
@@ -146,7 +151,7 @@
                         <div class="card shadow-sm">
                             <img src="img/wireframe-aspect_ratio-16-9.png" class="card-img-top" alt="describa la imagen" />
                             <div class="card-body">
-                            <p class="card-text"><a href="https://www.conaf.cl/conaf-reitera-llamado-a-no-ingresar-con-mascotas-a-parques-nacionales-tras-muerte-de-zorro-culpeo/">Artículo “CONAF reitera llamado a no ingresar con mascotas a parques nacionales tras muerte de zorro culpeo” (2019)</a></p>
+                                <p class="card-text">Arituclo 2019: “CONAF reitera llamado a no ingresar con mascotas a parques nacionales tras muerte de zorro culpeo”. </p>
                             </div>
                         </div>
                     </div>
@@ -174,7 +179,7 @@
                     <div class="modal-header">
                         <h4 class="modal-title">Sobre nosotras…</h4>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <i data-feather="users"></i>
+                            <i data-feather="x-circle"></i>
                         </button>
                     </div>
                     <div class="modal-body row" id="team"><!--esto queda vacío, por ahora--></div>
