--- a/surface.html
+++ b/surface.html
@@ -136,8 +136,8 @@
                                 <!-- icono 11 -->
                                 <div class="col-6 col-sm-4 col-md-3 col-lg-2">
                                     <div class="card text-center text-dark bg-light shadow-sm mb-4">
-                                        <i data-feather="heart" class="mx-auto mt-4 mb-2"></i>
-                                        <p class="small">heart</p>
+                                        <i data-feather="check" class="mx-auto mt-4 mb-2"></i>
+                                        <p class="small">check</p>
                                     </div>
                                 </div>
                                 <!-- icono 12 -->
