--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                         <div class="card shadow-sm">
                             <img src="img/wireframe-aspect_ratio-16-9.png" class="card-img-top" alt="describa la imagen" />
                             <div class="card-body">
-                                <a href="https://www.conaf.cl/conaf-reitera-llamado-a-no-ingresar-con-mascotas-a-parques-nacionales-tras-muerte-de-zorro-culpeo/">Arituclo 2019: “CONAF reitera llamado a no ingresar con mascotas a parques nacionales tras muerte de zorro culpeo”.</a>
+                                <a href="https://www.conaf.cl/conaf-reitera-llamado-a-no-ingresar-con-mascotas-a-parques-nacionales-tras-muerte-de-zorro-culpeo/">Artíuclo 2019: “CONAF reitera llamado a no ingresar con mascotas a parques nacionales tras muerte de zorro culpeo”.</a>
                             </div>
                         </div>
                     </div>
@@ -229,7 +229,7 @@
                 { nombre: "Victoria García", descriptor: "Pichon, 21 años, Acuario", foto: "img/wireframe-aspect_ratio-3-4.png" },
                 { nombre: "Martina González", descriptor: "Martuk, 21 años, Libra", foto: "img/wireframe-aspect_ratio-3-4.png" },
                 { nombre: "Javiera Infante", descriptor: "Jevy, 21 años, Cáncer", foto: "img/wireframe-aspect_ratio-3-4.png" },
-                { nombre: "Paula Scheleff", descriptor: "Pola, 21 años, Taurot", foto: "img/wireframe-aspect_ratio-3-4.png" },
+                { nombre: "Paula Scheleff", descriptor: "Pola, 21 años, Tauro", foto: "img/wireframe-aspect_ratio-3-4.png" },
                 { nombre: "Pía Sekul", descriptor: "Pía Zdenka, 20 años, Piscis", foto: "img/wireframe-aspect_ratio-3-4.png" },
                 { nombre: "Natalia Wang", descriptor: "Waty, 21 años, Libra", foto: "img/wireframe-aspect_ratio-3-4.png" },
             ];
