--- a/surface.html
+++ b/surface.html
@@ -129,8 +129,8 @@
                                 <!-- icono 10 -->
                                 <div class="col-6 col-sm-4 col-md-3 col-lg-2">
                                     <div class="card text-center text-dark bg-light shadow-sm mb-4">
-                                        <i data-feather="headphones" class="mx-auto mt-4 mb-2"></i>
-                                        <p class="small">headphones</p>
+                                        <i data-feather="x" class="mx-auto mt-4 mb-2"></i>
+                                        <p class="small">x</p>
                                     </div>
                                 </div>
                                 <!-- icono 11 -->
