--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                             <a href="https://github.com/profesorfaco/digital">Módulo Digital</a> &bull;
                             <a href="http://catalogo.uc.cl/index.php?tmpl=component&option=com_catalogo&view=programa&sigla=dno0323">Procesos de Producción</a> &bull; <a href="https://diseno.uc.cl/">Diseño UC</a>
                         </small>
-                        <a href="#nuestroModal" data-toggle="modal"><i data-feather="info"></i></a>
+                        <a href="#nuestroModal" data-toggle="modal"><i data-feather="users"></i></a>
                     </div>
                 </div>
             </div>
@@ -179,7 +179,7 @@
                     <div class="modal-header">
                         <h4 class="modal-title">Sobre nosotras…</h4>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <i data-feather="users"></i>
+                            <i data-feather="x"></i>
                         </button>
                     </div>
                     <div class="modal-body row" id="team"><!--esto queda vacío, por ahora--></div>
