--- a/skeleton.html
+++ b/skeleton.html
@@ -120,7 +120,7 @@
                         <div class="card shadow-sm">
                             <img src="img/wireframe-aspect_ratio-16-9.png" class="card-img-top" alt="describa la imagen" />
                             <div class="card-body">
-                                <p class="card-text">Infórmate más sobre temas de contaminación ambiental en las zonas silvestres de nuestro país</p>
+                                <a href="https://www.youtube.com/user/conafchile"> Infórmate más sobre temas de contaminación ambiental en las zonas silvestres de nuestro país por el canal de Youtube de la CONAF.</a>
                             </div>
                         </div>
                     </div>
@@ -128,7 +128,7 @@
                         <div class="card shadow-sm">
                             <img src="img/wireframe-aspect_ratio-16-9.png" class="card-img-top" alt="describa la imagen" />
                             <div class="card-body">
-                                <p class="card-text">¡Descarga nuestro fanzine, comprométete, compártelo en tus redes sociales con el hashtag #cuidemoslasareassilvestres!</p>
+                                <a href="https://drive.google.com/file/d/1IsB2cFMY9Fqihc4kyAYL32lNMiWLMios/view?usp=sharing"> ¡Descarga nuestro fanzine informativo sobre el impacto de los perros en las zonas silvestres!</a>
                             </div>
                         </div>
                     </div>
@@ -136,7 +136,7 @@
                         <div class="card shadow-sm">
                             <img src="img/wireframe-aspect_ratio-16-9.png" class="card-img-top" alt="describa la imagen" />
                             <div class="card-body">
-                                <p class="card-text">Arituclo 2019: “CONAF reitera llamado a no ingresar con mascotas a parques nacionales tras muerte de zorro culpeo”.</p>
+                                <a href="https://www.conaf.cl/conaf-reitera-llamado-a-no-ingresar-con-mascotas-a-parques-nacionales-tras-muerte-de-zorro-culpeo/">Artículo 2019: “CONAF reitera llamado a no ingresar con mascotas a parques nacionales tras muerte de zorro culpeo”.</a>
                             </div>
                         </div>
                     </div>
