--- a/skeleton.html
+++ b/skeleton.html
@@ -62,7 +62,7 @@
                 <div class="container">
                     <div class="row py-5 align-items-center">
                         <div class="col-md-6 col-lg-7">
-                            <img loading="lazy" class="img-fluid bg-light" src="img/Gráfico (módulo digital)_Mesa de trabajo 1.svg" alt="Gráfico de porcentaje de áreas silvestres amenazadas por perros" />
+                            <img loading="lazy" class="img-fluid bg-light" src="img/wireframe-aspect_ratio-16-9.png" alt="describa la imagen" />
                         </div>
                         <div class="col-md-6 col-lg-5 p-4">
                             <h3><i data-feather="circle"></i> Animales domésticos pueden llegar a afectar gravemente a especies de áreas protegidas de nuestro país.</h3>
@@ -70,7 +70,7 @@
                             Existe tanto un peligro en los instintos que tiene el animal como el orinar o defecar en distintas plantas y los ataques a otros animales y sus hábitats seguros, como un riesgo de transmisión de enfermedades letales. Es de suma importancia concientizar sobre problemáticas cotidianas para comenzar a generar una conversación a nivel individual y comunitario. Este es un tema poco conocido por la mayoría de los dueños de perros y que sigue siendo un hecho que ocurre diariamente.
                             </p>
                             <p class="small d-none d-lg-block">
-                                En YouTube busquen el botón de compartir. Al presionarlo, aparece una ventana. Seleccionen la opción "insertar". Copien el código. Luego reemplacen en ancho y alto por la clase de Bootstrap.
+                                Si revisan el código fuente, podrán notar que el gráfico mantiene una proporción definida con <a href="https://developer.mozilla.org/en-US/docs/Web/SVG/Attribute/viewBox">viewBox</a>, y con ella se adapta a cualquier condición de pantalla.
                             </p>
                         </div>
                     </div>
