--- a/skeleton.html
+++ b/skeleton.html
@@ -62,7 +62,7 @@
                 <div class="container">
                     <div class="row py-5 align-items-center">
                         <div class="col-md-6 col-lg-7">
-                            <img loading="lazy" class="img-fluid bg-light" src="img/wireframe-aspect_ratio-16-9.png" alt="describa la imagen" />
+                            <img loading="lazy" class="img-fluid bg-light" src="img/grafico.svg" alt="grafico que muestra el porcentaje de areas silvestres amenazadas por perros y gatos" />
                         </div>
                         <div class="col-md-6 col-lg-5 p-4">
                             <h3><i data-feather="circle"></i> Animales domésticos pueden llegar a afectar gravemente a especies de áreas protegidas de nuestro país.</h3>
