--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <div class="container">
                     <div class="row py-5 align-items-center">
                         <div class="col-md-6 col-lg-7">
-                            <svg version="1.1" id="ilustracion" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 800 450" xml:space="preserve">
+                            <svg version="1.1" id="ilustracion" img:src="img/grafico.svg" x="0px" y="0px" viewBox="0 0 800 450" xml:space="preserve">
                                 <circle cx="400" cy="225" r="35" />
                             </svg>
                         </div>
