--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
                 <div class="container">
                     <div class="row py-5 align-items-center">
                         <div class="col-md-6 col-lg-7">
-                            <svg version="1.1" id="ilustracion" img:src="img/grafico.svg" x="0px" y="0px" viewBox="0 0 800 450" xml:space="preserve">
+                            <img:src="img/grafico.svg" x="0px" y="0px" viewBox="0 0 800 450">
                                 <circle cx="400" cy="225" r="35" />
-                            </svg>
+                            </img>
                         </div>
                         <div class="col-md-6 col-lg-5 p-4">
                             <h3><i data-feather="pen-tool"></i> Este subtítulo tiene que comentar un svg</h3>
