--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
                 </div>
             </article>
             <!--artículo con SVG-->
-            <article>
+           <article>
                 <div class="container">
                     <div class="row py-5 align-items-center">
                         <div class="col-md-6 col-lg-7">
-                            <img:src="img/grafico.svg" x="0px" y="0px" viewBox="0 0 800 450">
+                            <svg version="1.1" id="ilustracion" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 800 450" xml:space="preserve">
                                 <circle cx="400" cy="225" r="35" />
-                            </img>
+                            </svg>
                         </div>
                         <div class="col-md-6 col-lg-5 p-4">
                             <h3><i data-feather="pen-tool"></i> Este subtítulo tiene que comentar un svg</h3>
