--- a/index.html
+++ b/index.html
@@ -78,9 +78,59 @@
                 <div class="container">
                     <div class="row py-5 align-items-center">
                         <div class="col-md-6 col-lg-7">
-                            <svg version="1.1" id="ilustracion" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 800 450" xml:space="preserve">
-                                <circle cx="400" cy="225" r="35" />
-                            </svg>
+                            <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 800 400" style="enable-background:new 0 0 800 400;" xml:space="preserve">
+<style type="text/css">
+	.st0{fill:#F49F3F;}
+	.st1{fill:#7872AD;}
+	.st2{fill:none;}
+	.st3{fill:#37806F;}
+	.st4{font-family:'Montserrat-Medium';}
+	.st5{font-size:12px;}
+	.st6{font-size:13px;}
+	.st7{fill:none;stroke:#37806F;stroke-miterlimit:10;}
+	.st8{font-family:'Montserrat-Bold';}
+	.st9{font-size:20px;}
+	.st10{fill:#FFFFFF;}
+	.st11{font-size:18px;}
+</style>
+<g>
+</g>
+<g>
+</g>
+<g>
+	<g>
+		<g>
+			<g>
+				<path class="st0" d="M344.98,186.72l75.43-111.75c34.56,23.33,55.27,58.5,58.89,100.05L344.98,186.72z"/>
+			</g>
+		</g>
+		<g>
+			<g>
+				<path class="st1" d="M344.98,186.72l134.32-11.71c6.47,74.18-48.43,139.56-122.61,146.03
+					c-74.18,6.47-139.56-48.43-146.03-122.61S259.09,58.87,333.27,52.41c32.64-2.85,59.98,4.24,87.14,22.56L344.98,186.72z"/>
+			</g>
+		</g>
+	</g>
+	<rect x="465.26" y="288.99" class="st2" width="103.65" height="34.57"/>
+	<text transform="matrix(1 0 0 1 517.0908 297.8969)"><tspan x="0" y="0" class="st3 st4 st5"> </tspan><tspan x="-41.9" y="15.6" class="st3 st4 st6">amenazadas</tspan></text>
+	<rect x="231.88" y="338.26" class="st2" width="226.19" height="59.94"/>
+	<text transform="matrix(1 0 0 1 344.9788 347.1614)"><tspan x="0" y="0" class="st1 st4 st5"> </tspan><tspan x="-80.24" y="14.4" class="st1 st4 st5">(Miradordecondores,2020)</tspan></text>
+	<rect x="501.04" y="106.71" class="st2" width="88.82" height="33.46"/>
+	<text transform="matrix(1 0 0 1 569.5214 116.361)"><tspan x="0" y="0" class="st3 st4 st5"> </tspan><tspan x="3.23" y="0" class="st3 st4 st6">no </tspan><tspan x="-63.46" y="15.6" class="st3 st4 st6">amenazadas</tspan></text>
+	<polyline class="st7" points="517.4,112.36 505.34,112.36 473.4,124.9 	"/>
+	<polyline class="st7" points="495.4,293.1 483.1,293.1 457.28,269.71 	"/>
+	<circle class="st1" cx="494.13" cy="293.1" r="2.65"/>
+	<circle class="st0" cx="517.4" cy="112.36" r="2.65"/>
+	<rect x="505.34" y="282.32" class="st2" width="58.03" height="21.55"/>
+	<text transform="matrix(1 0 0 1 512.6169 297.1633)" class="st3 st8 st9">86%</text>
+	<rect x="517.4" y="101.59" class="st2" width="58.03" height="21.55"/>
+	<text transform="matrix(1 0 0 1 526.8345 116.4245)" class="st3 st8 st9">14%</text>
+	<circle class="st10" cx="344.98" cy="186.72" r="94.3"/>
+	<rect x="268.16" y="138.18" class="st2" width="149.64" height="149.81"/>
+	<text transform="matrix(1 0 0 1 297.8081 151.5403)"><tspan x="0" y="0" class="st3 st8 st11"> % ÁREAS </tspan><tspan x="-11.41" y="21.6" class="st3 st8 st11">SILVESTRES </tspan><tspan x="-23.53" y="43.2" class="st3 st8 st11">AMENAZADAS </tspan><tspan x="-26" y="64.8" class="st3 st8 st11">POR PERROS Y </tspan><tspan x="12.44" y="86.4" class="st3 st8 st11">GATOS</tspan></text>
+</g>
+</svg>
                         </div>
                         <div class="col-md-6 col-lg-5 p-4">
                             <h3><i data-feather="pen-tool"></i> Este subtítulo tiene que comentar un svg</h3>
