--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@
 	.st2{fill:none;}
 	.st3{fill:#37806F;}
 	.st4{font-family:'Montserrat-Medium';}
-	.st5{font-size:12px;}
-	.st6{font-size:13px;}
-	.st7{fill:none;stroke:#37806F;stroke-miterlimit:10;}
+	.st5{font-size:21.694px;}
+	.st6{font-size:13.4296px;}
+	.st7{fill:none;stroke:#37806F;stroke-width:2;stroke-miterlimit:10;}
 	.st8{font-family:'Montserrat-Bold';}
-	.st9{font-size:20px;}
+	.st9{font-size:30.9914px;}
 	.st10{fill:#FFFFFF;}
-	.st11{font-size:18px;}
+	.st11{font-size:25.8262px;}
 </style>
 <g>
 </g>
@@ -101,36 +101,35 @@
 <g>
 	<g>
 		<g>
-			<g>
-				<path class="st0" d="M344.98,186.72l75.43-111.75c34.56,23.33,55.27,58.5,58.89,100.05L344.98,186.72z"/>
-			</g>
-		</g>
-		<g>
-			<g>
-				<path class="st1" d="M344.98,186.72l134.32-11.71c6.47,74.18-48.43,139.56-122.61,146.03
-					c-74.18,6.47-139.56-48.43-146.03-122.61S259.09,58.87,333.27,52.41c32.64-2.85,59.98,4.24,87.14,22.56L344.98,186.72z"/>
-			</g>
+			<path class="st0" d="M335.22,180.52l97.97-145.15c44.89,30.3,71.78,75.98,76.48,129.94L335.22,180.52z"/>
 		</g>
 	</g>
-	<rect x="465.26" y="288.99" class="st2" width="103.65" height="34.57"/>
-	<text transform="matrix(1 0 0 1 517.0908 297.8969)"><tspan x="0" y="0" class="st3 st4 st5"> </tspan><tspan x="-41.9" y="15.6" class="st3 st4 st6">amenazadas</tspan></text>
-	<rect x="231.88" y="338.26" class="st2" width="226.19" height="59.94"/>
-	<text transform="matrix(1 0 0 1 344.9788 347.1614)"><tspan x="0" y="0" class="st1 st4 st5"> </tspan><tspan x="-80.24" y="14.4" class="st1 st4 st5">(Miradordecondores,2020)</tspan></text>
-	<rect x="501.04" y="106.71" class="st2" width="88.82" height="33.46"/>
-	<text transform="matrix(1 0 0 1 569.5214 116.361)"><tspan x="0" y="0" class="st3 st4 st5"> </tspan><tspan x="3.23" y="0" class="st3 st4 st6">no </tspan><tspan x="-63.46" y="15.6" class="st3 st4 st6">amenazadas</tspan></text>
-	<polyline class="st7" points="517.4,112.36 505.34,112.36 473.4,124.9 	"/>
-	<polyline class="st7" points="495.4,293.1 483.1,293.1 457.28,269.71 	"/>
-	<circle class="st1" cx="494.13" cy="293.1" r="2.65"/>
-	<circle class="st0" cx="517.4" cy="112.36" r="2.65"/>
-	<rect x="505.34" y="282.32" class="st2" width="58.03" height="21.55"/>
-	<text transform="matrix(1 0 0 1 512.6169 297.1633)" class="st3 st8 st9">86%</text>
-	<rect x="517.4" y="101.59" class="st2" width="58.03" height="21.55"/>
-	<text transform="matrix(1 0 0 1 526.8345 116.4245)" class="st3 st8 st9">14%</text>
-	<circle class="st10" cx="344.98" cy="186.72" r="94.3"/>
-	<rect x="268.16" y="138.18" class="st2" width="149.64" height="149.81"/>
-	<text transform="matrix(1 0 0 1 297.8081 151.5403)"><tspan x="0" y="0" class="st3 st8 st11"> % ÁREAS </tspan><tspan x="-11.41" y="21.6" class="st3 st8 st11">SILVESTRES </tspan><tspan x="-23.53" y="43.2" class="st3 st8 st11">AMENAZADAS </tspan><tspan x="-26" y="64.8" class="st3 st8 st11">POR PERROS Y </tspan><tspan x="12.44" y="86.4" class="st3 st8 st11">GATOS</tspan></text>
+	<g>
+		<g>
+			<path class="st1" d="M335.22,180.52l174.45-15.21c8.4,96.35-62.9,181.26-159.25,189.66s-181.26-62.9-189.66-159.25
+				c-8.4-96.35,62.9-181.26,159.25-189.66c42.39-3.7,77.91,5.5,113.18,29.31L335.22,180.52z"/>
+		</g>
+	</g>
 </g>
+<rect x="467.55" y="311.28" class="st2" width="173.78" height="44.9"/>
+<text transform="matrix(1 0 0 1 554.4414 327.377)"><tspan x="0" y="0" class="st3 st4 st5"> </tspan><tspan x="-69.92" y="26.03" class="st3 st4 st5">amenazadas</tspan></text>
+<rect x="196.59" y="362.87" class="st2" width="293.78" height="77.86"/>
+<text transform="matrix(1 0 0 1 343.4814 372.833)"><tspan x="0" y="0" class="st1 st4 st6"> </tspan><tspan x="-91.61" y="16.12" class="st1 st4 st6">(Miradordecondores ,2020)</tspan></text>
+<rect x="534.01" y="76.6" class="st2" width="147.58" height="43.46"/>
+<text transform="matrix(1 0 0 1 647.209 92.6987)"><tspan x="0" y="0" class="st3 st4 st5"> no </tspan><tspan x="-105.45" y="26.03" class="st3 st4 st5">amenazadas</tspan></text>
+<polyline class="st7" points="559.16,83.94 543.5,83.94 502.01,100.23 "/>
+<polyline class="st7" points="530.58,318.68 514.6,318.68 481.07,288.3 "/>
+<circle class="st0" cx="559.16" cy="83.94" r="6.32"/>
+<rect x="550.6" y="304.68" class="st2" width="75.37" height="27.99"/>
+<text transform="matrix(1 0 0 1 554.5938 327.6797)" class="st3 st8 st9">86%</text>
+<rect x="574.39" y="69.94" class="st2" width="75.37" height="27.99"/>
+<text transform="matrix(1 0 0 1 581.7334 92.9346)" class="st3 st8 st9">14%</text>
+<circle class="st10" cx="335.22" cy="180.52" r="122.48"/>
+<rect x="221.51" y="112.31" class="st2" width="229.49" height="194.57"/>
+<text transform="matrix(1 0 0 1 271.4395 131.4717)"><tspan x="0" y="0" class="st3 st8 st11"> % ÁREAS </tspan><tspan x="-16.37" y="30.99" class="st3 st8 st11">SILVESTRES </tspan><tspan x="-33.75" y="61.98" class="st3 st8 st11">AMENAZADAS </tspan><tspan x="-37.31" y="92.97" class="st3 st8 st11">POR PERROS Y </tspan><tspan x="17.85" y="123.97" class="st3 st8 st11">GATOS</tspan></text>
+<circle class="st1" cx="532.28" cy="318.68" r="6.32"/>
 </svg>
+
                         </div>
                         <div class="col-md-6 col-lg-5 p-4">
                             <h3><i data-feather="pen-tool"></i> Este subtítulo tiene que comentar un svg</h3>
