--- a/skeleton.html
+++ b/skeleton.html
@@ -65,12 +65,12 @@
                             <img loading="lazy" class="img-fluid bg-light" src="img/graficopdp.svg" alt="areas silvestres amenazadas por perros y gatos" />
                         </div>
                         <div class="col-md-6 col-lg-5 p-4">
-                            <h3><i data-feather="circle"></i> Animales domésticos pueden llegar a afectar gravemente a especies de áreas protegidas de nuestro país.</h3>
+                            <h3><i data-feather="circle"></i> Animales domésticos pueden afectar gravemente a especies de áreas protegidas de nuestro país.</h3>
                             <p>
-                            Existe tanto un peligro en los instintos que tiene el animal como el orinar o defecar en distintas plantas y los ataques a otros animales y sus hábitats seguros, como un riesgo de transmisión de enfermedades letales. Es de suma importancia concientizar sobre problemáticas cotidianas para comenzar a generar una conversación a nivel individual y comunitario. Este es un tema poco conocido por la mayoría de los dueños de perros y que sigue siendo un hecho que ocurre diariamente.
+                            Los perros y los gatos son un peligro para la flora y fauna de las áreas silvestres por distintos motivos. Por un lado, sus instintos pueden llevarlos a atacar a otros animales en sus hábitats. Por otro lado al orinar y defecar pueden transmitirles a otros animales enfermedades.
                             </p>
                             <p class="small d-none d-lg-block">
-                                Si revisan el código fuente, podrán notar que el gráfico mantiene una proporción definida con <a href="https://developer.mozilla.org/en-US/docs/Web/SVG/Attribute/viewBox">viewBox</a>, y con ella se adapta a cualquier condición de pantalla.
+                                Este es un tema poco conocido, por lo que es importante concientizar sobre esta problemática cotidiana.
                             </p>
                         </div>
                     </div>
