--- a/index.html
+++ b/index.html
@@ -132,12 +132,12 @@
 
                         </div>
                         <div class="col-md-6 col-lg-5 p-4">
-                            <h3><i data-feather="pen-tool"></i> Este subtítulo tiene que comentar un svg</h3>
+                            <h3><i data-feather="pen-tool"></i>Animales domésticos afectan a especies en áreas protegidas de nuestro país</h3>
                             <p>
-                                SVG (Scalable Vector Graphics) es un dialecto de descripción de gráficos vectoriales bidimensionales, tanto estáticos como animados. Es más que una opción para guardar en Illustrator. <a href="https://developer.mozilla.org/es/docs/Web/SVG">SVG es un estándar Web abierto basado en texto</a>.
+                                Los perros y los gatos son un peligro para la flora y fauna de las áreas silvestres por distintos motivos. Por un lado, sus instintos pueden llevarlos a atacar a otros animales en sus hábitats. Por otro lado al orinar y defecar pueden transmitirles a otros animales enfermedades.
                             </p>
                             <p class="small d-none d-lg-block">
-                                Si revisan el código fuente, podrán notar que el gráfico mantiene una proporción definida con <a href="https://developer.mozilla.org/en-US/docs/Web/SVG/Attribute/viewBox">viewBox</a>, y con ella se adapta a cualquier condición de pantalla.
+                                Este es un tema poco conocido, por lo que es importante concientizar sobre esta problemática cotidiana.
                             </p>
                         </div>
                     </div>
