--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <div class="row py-5 align-items-center">
                         <div class="col-md-6 col-lg-7 order-sm-last">
                             <div class="embed-responsive embed-responsive-16by9">
-				    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/p2n9Umubv30" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/p2n9Umubv30" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                             </div>
                         </div>
                         <div class="col-md-6 col-lg-5 p-4 text-md-right order-sm-first">
