--- a/skeleton.html
+++ b/skeleton.html
@@ -46,12 +46,12 @@
                             <img loading="lazy" class="img-fluid bg-light d-none d-lg-block" src="img/parques-nacionales-chile-3.jpg" alt="describa la imagen" />
                         </div>
                         <div class="col-md-6 col-lg-5 p-4 text-md-right order-sm-first">
-                            <h3><i data-feather="circle"></i> Normativa Perros y otras mascotas al interior de Áreas Silvestres Protegidas</h3>
+                            <h3><i data-feather="circle"></i>Normativa para mascotas en Áreas Silvestres Protegidas</h3>
                             <p>
-                               La Normativa para el manejo de perros y otras mascotas en las Áreas Silvestres Protegidas, administradas por CONAF, es un documento que busca regular la forma en que el personal de la institución, así como los visitantes, poblaciones humanas aledañas y demás personas e instituciones relacionadas con el tema, deben conducirse al interior  de cualquier parque nacional, reserva nacional o monumento natural y otras áreas protegidas, en relación a la presencia y tenencia de animales domésticos (perros, gatos  y otros).
+                              Se regula la forma tanto en que el personal del área como los visitantes y la población humana aledaña deben conducirse al interior de cualquier parque nacional, reserva nacional o monumento natural y otras áreas protegidas. Esto en relación a la presencia y tenencia de animales domésticos (perros, gatos y otros).
                             </p>
                            <p class="small d-none d-lg-block">
-                                En YouTube busquen el botón de compartir. Al presionarlo, aparece una ventana. Seleccionen la opción "insertar". Copien el código. Luego reemplacen en ancho y alto por la clase de Bootstrap.
+                                El documento de la Normativa para el manejo de perros y otras mascotas en las Áreas Silvestres Protegidas es administrado por CONAF.
                             </p>
                         </div>
                     </div>
