--- a/skeleton.html
+++ b/skeleton.html
@@ -24,6 +24,8 @@
                     <div class="row py-5 align-items-center">
                         <div class="col-md-6 col-lg-7">
                             <img loading="lazy" class="img-fluid bg-light d-md-none" src="img/parques-nacionales-chile-3.jpg" alt="describa la imagen" />
+                            <img loading="lazy" class="img-fluid bg-light d-none d-md-block d-lg-none" src="img/wireframe-aspect_ratio-4-3.png" alt="describa la imagen" />
+                            <img loading="lazy" class="img-fluid bg-light d-none d-lg-block" src="img/wireframe-aspect_ratio-16-9.png" alt="describa la imagen" />
                         </div>
                         <div class="col-md-6 col-lg-5 p-4">
                             <h3><i data-feather="circle"></i> Áreas protegidas</h3>
@@ -36,6 +38,7 @@
                     </div>
                 </div>
             </article>
+        
             <!--artículo con EMBED-->
             <article>
                 <div class="container">
