--- a/skeleton.html
+++ b/skeleton.html
@@ -19,13 +19,13 @@
         </header>
         <main role="main" class="pb-5">
             <!--artículo con IMAGEN-->
-            <article>
+             <article>
                 <div class="container">
                     <div class="row py-5 align-items-center">
                         <div class="col-md-6 col-lg-7">
-                            <img loading="lazy" class="img-fluid bg-light d-md-none" src="img/parques-nacionales-chile-3.jpg" alt="describa la imagen" />
-                            <img loading="lazy" class="img-fluid bg-light d-none d-md-block d-lg-none" src="img/parques-nacionales-chile-3.jpg" alt="describa la imagen" />
-                            <img loading="lazy" class="img-fluid bg-light d-none d-lg-block" src="img/parques-nacionales-chile-3.jpg" alt="describa la imagen" />
+                            <img loading="lazy" class="img-fluid bg-light d-md-none" src="img/wireframe-aspect_ratio-1-1.png" alt="describa la imagen" />
+                            <img loading="lazy" class="img-fluid bg-light d-none d-md-block d-lg-none" src="img/wireframe-aspect_ratio-4-3.png" alt="describa la imagen" />
+                            <img loading="lazy" class="img-fluid bg-light d-none d-lg-block" src="img/wireframe-aspect_ratio-16-9.png" alt="describa la imagen" />
                         </div>
                         <div class="col-md-6 col-lg-5 p-4">
                             <h3><i data-feather="circle"></i> Áreas protegidas</h3>
