--- a/skeleton.html
+++ b/skeleton.html
@@ -19,7 +19,7 @@
         </header>
         <main role="main" class="pb-5">
             <!--artículo con IMAGEN-->
-             <article>
+              <article>
                 <div class="container">
                     <div class="row py-5 align-items-center">
                         <div class="col-md-6 col-lg-7">
@@ -28,11 +28,12 @@
                             <img loading="lazy" class="img-fluid bg-light d-none d-lg-block" src="img/wireframe-aspect_ratio-16-9.png" alt="describa la imagen" />
                         </div>
                         <div class="col-md-6 col-lg-5 p-4">
-                            <h3><i data-feather="circle"></i> Áreas protegidas</h3>
+                            <h3><i data-feather="circle"></i> Este subtítulo tiene que comentar una imagen</h3>
                             <p>
-                               “Son territorios protegidos legalmente que tienen la finalidad de asegurar la diversidad biológica, amparar la preservación de la naturaleza o conservar el patrimonio ambiental” (MMA, 2020)
+                                La imagen debe tener una extensión JPG, PNG o GIF. Como pueden ver en el código, en estricto rigor, no se trata de una única imagen, sino tres. Es una, de tres, la que se muestra según el tamaño de pantalla del dispositivo: pequeña, mediana o grande.
                             </p>
                             <p class="small d-none d-lg-block">
+                                En la pantalla pequeña la imagen es cuadrada. En la pantalla mediana es rectangular y apaisada, con lados en <a href="https://es.wikipedia.org/wiki/Relaci%C3%B3n_de_aspecto">relación de aspecto</a> 4:3. En la pantalla grande la relación es 16:9
                             </p>
                         </div>
                     </div>
