--- a/skeleton.html
+++ b/skeleton.html
@@ -45,15 +45,15 @@
                 <div class="container">
                     <div class="row py-5 align-items-center">
                         <div class="col-md-6 col-lg-7 order-sm-last">
-                            <img loading="lazy" class="img-fluid bg-light" src="img/wireframe-aspect_ratio-16-9.png" alt="describa la imagen"
+                            <img loading="lazy" class="img-fluid bg-light" src="img/wireframe-aspect_ratio-16-9.png" alt="describa la imagen" />
                         </div>
                         <div class="col-md-6 col-lg-5 p-4 text-md-right order-sm-first">
-                            <h3><i data-feather="circle"></i>Normativa para mascotas en Áreas Silvestres Protegidas</h3>
+                            <h3><i data-feather="circle"></i> Este subtítulo tiene que comentar un embed</h3>
                             <p>
-                              Se regula la forma tanto en que el personal del área como los visitantes y la población humana aledaña deben conducirse al interior de cualquier parque nacional, reserva nacional o monumento natural y otras áreas protegidas. Esto en relación a la presencia y tenencia de animales domésticos (perros, gatos y otros).
+                                El <a href="https://getbootstrap.com/docs/4.5/utilities/embed/"><strong>embed</strong> lo encuentran en las <strong>utilidades</strong></a> del sitio web oficial de Boostrap. Allí se explica su uso, y se presentan otras opciones de "razón" disponibles. Se recomienda mantener la razón 16:9 que es utilizada en este ejemplo y los que siguen.
                             </p>
-                           <p class="small d-none d-lg-block">
-                                El documento de la Normativa para el manejo de perros y otras mascotas en las Áreas Silvestres Protegidas es administrado por CONAF.
+                            <p class="small d-none d-lg-block">
+                                En YouTube busquen el botón de compartir. Al presionarlo, aparece una ventana. Seleccionen la opción "insertar". Copien el código. Luego reemplacen en ancho y alto por la clase de Bootstrap.
                             </p>
                         </div>
                     </div>
