--- a/skeleton.html
+++ b/skeleton.html
@@ -28,12 +28,12 @@
                             <img loading="lazy" class="img-fluid bg-light d-none d-lg-block" src="img/wireframe-aspect_ratio-16-9.png" alt="describa la imagen" />
                         </div>
                         <div class="col-md-6 col-lg-5 p-4">
-                            <h3><i data-feather="circle"></i> Este subtítulo tiene que comentar una imagen</h3>
+                            <h3><i data-feather="circle"></i> Áreas protegidas</h3>
                             <p>
-                                La imagen debe tener una extensión JPG, PNG o GIF. Como pueden ver en el código, en estricto rigor, no se trata de una única imagen, sino tres. Es una, de tres, la que se muestra según el tamaño de pantalla del dispositivo: pequeña, mediana o grande.
+                                “Son territorios protegidos legalmente que tienen la finalidad de asegurar la diversidad biológica, amparar la preservación de la naturaleza o conservar el patrimonio ambiental” (MMA, 2020).
                             </p>
                             <p class="small d-none d-lg-block">
-                                En la pantalla pequeña la imagen es cuadrada. En la pantalla mediana es rectangular y apaisada, con lados en <a href="https://es.wikipedia.org/wiki/Relaci%C3%B3n_de_aspecto">relación de aspecto</a> 4:3. En la pantalla grande la relación es 16:9
+                                Hoy muchas Áreas Silvestres se encuentran gravemente en peligro y todos podemos ayudar.
                             </p>
                         </div>
                     </div>
@@ -48,12 +48,12 @@
                             <img loading="lazy" class="img-fluid bg-light" src="img/wireframe-aspect_ratio-16-9.png" alt="describa la imagen" />
                         </div>
                         <div class="col-md-6 col-lg-5 p-4 text-md-right order-sm-first">
-                            <h3><i data-feather="circle"></i> Este subtítulo tiene que comentar un embed</h3>
+                            <h3><i data-feather="circle"></i> Normativa para mascotas en Áreas Silvestres Protegidas</h3>
                             <p>
-                                El <a href="https://getbootstrap.com/docs/4.5/utilities/embed/"><strong>embed</strong> lo encuentran en las <strong>utilidades</strong></a> del sitio web oficial de Boostrap. Allí se explica su uso, y se presentan otras opciones de "razón" disponibles. Se recomienda mantener la razón 16:9 que es utilizada en este ejemplo y los que siguen.
+                                Se regula la forma tanto en que el personal del área como los visitantes y la población humana aledaña deben conducirse al interior de cualquier parque nacional, reserva nacional o monumento natural y otras áreas protegidas. Esto en relación a la presencia y tenencia de animales domésticos (perros, gatos y otros). 
                             </p>
                             <p class="small d-none d-lg-block">
-                                En YouTube busquen el botón de compartir. Al presionarlo, aparece una ventana. Seleccionen la opción "insertar". Copien el código. Luego reemplacen en ancho y alto por la clase de Bootstrap.
+                                El documento de la Normativa para el manejo de perros y otras mascotas en las Áreas Silvestres Protegidas es administrado por CONAF.
                             </p>
                         </div>
                     </div>
