--- a/skeleton.html
+++ b/skeleton.html
@@ -28,7 +28,7 @@
                             <img loading="lazy" class="img-fluid bg-light d-none d-lg-block" src="img/wireframe-aspect_ratio-16-9.png" alt="describa la imagen" />
                         </div>
                         <div class="col-md-6 col-lg-5 p-4">
-                            <h3><i data-feather="circle"></i> Áreas protegidas</h3>
+                            <h3><i data-feather="heart"></i> Áreas protegidas</h3>
                             <p>
                                 “Son territorios protegidos legalmente que tienen la finalidad de asegurar la diversidad biológica, amparar la preservación de la naturaleza o conservar el patrimonio ambiental” (MMA, 2020).
                             </p>
@@ -48,7 +48,7 @@
                             <img loading="lazy" class="img-fluid bg-light" src="img/wireframe-aspect_ratio-16-9.png" alt="describa la imagen" />
                         </div>
                         <div class="col-md-6 col-lg-5 p-4 text-md-right order-sm-first">
-                            <h3><i data-feather="circle"></i> Normativa para mascotas en Áreas Silvestres Protegidas</h3>
+                            <h3><i data-feather="book-open"></i> Normativa para mascotas en Áreas Silvestres Protegidas</h3>
                             <p>
                                 Se regula la forma tanto en que el personal del área como los visitantes y la población humana aledaña deben conducirse al interior de cualquier parque nacional, reserva nacional o monumento natural y otras áreas protegidas. Esto en relación a la presencia y tenencia de animales domésticos (perros, gatos y otros). 
                             </p>
