--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                                 “Son territorios protegidos legalmente que tienen la finalidad de asegurar la diversidad biológica, amparar la preservación de la naturaleza o conservar el patrimonio ambiental” (MMA, 2020)
                             </p>
                               <p class="small d-none d-lg-block">
-                                En la pantalla pequeña la imagen es cuadrada. En la pantalla mediana es rectangular y apaisada, con lados en <a href="https://es.wikipedia.org/wiki/Relaci%C3%B3n_de_aspecto">relación de aspecto</a> 4:3. En la pantalla grande la relación es 16:9
+                                Hoy muchas Áreas Silvestres se encuentran gravemente en peligro y todos podemos ayudar.
                             </p>
                        
                         </div>
