--- a/skeleton.html
+++ b/skeleton.html
@@ -67,7 +67,7 @@
                             <img loading="lazy" class="img-fluid bg-light" src="img/graficopdp.svg" alt="areas silvestres amenazadas por perros y gatos" />
                         </div>
                         <div class="col-md-6 col-lg-5 p-4">
-                            <h3><i data-feather="circle"></i> Animales domésticos afectan a especies en áreas protegidas de nuestro país.</h3>
+                            <h3><i data-feather="pen-tool"></i> Animales domésticos afectan a especies en áreas protegidas de nuestro país.</h3>
                             <p>
                             Los perros y los gatos son un peligro para la flora y fauna de las áreas silvestres por distintos motivos. Por un lado, sus instintos pueden llevarlos a atacar a otros animales en sus hábitats. Por otro lado al orinar y defecar pueden transmitirles a otros animales enfermedades.
                             </p>
@@ -102,7 +102,7 @@
                 <div class="container">
                     <div class="row py-4">
                         <div class="col-10 mx-auto mb-5 text-center">
-                            <p><i data-feather="circle"></i></p>
+                            <p><i data-feather="smile"></i></p>
                             <p class="lead">
                                 ¿Vas a seguir llevando a tu perro al cerro? Te invitamos a unirte a este compromiso para que junto a tu mascota puedan proteger a nuestra flora y fauna silvestre. ¡Descarga nuestro fanzine, comprométete, compártelo en tus redes sociales con el hashtag #cuidemoslasareassilvestres!
                             </p>
