--- a/skeleton.html
+++ b/skeleton.html
@@ -86,7 +86,7 @@
                             <img loading="lazy" class="img-fluid bg-light" src="img/wireframe-aspect_ratio-16-9.png" alt="describa la imagen" />
                         </div>
                         <div class="col-md-6 col-lg-5 p-4 text-md-right order-sm-first">
-                            <h3><i data-feather="circle"></i> Este subtítulo tiene que comentar un canvas</h3>
+                            <h3><i data-feather="thumbs-up"></i> Este subtítulo tiene que comentar un canvas</h3>
                             <p>
                                 Canvas también nos permite dibujar con texto. Pero aquí tenemos un elemento de HTML cuyas dimensiones no se ajustan automáticamente, y dentro del cual se programan gráficos tipo bitmap, generalmente, con JavaScript.
                             </p>
