--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     <div class="row py-5 align-items-center">
                         <div class="col-md-6 col-lg-7 order-sm-last"><div id="p5"></div></div>
                         <div class="col-md-6 col-lg-5 p-4 text-md-right order-sm-first">
-                            <h3><i data-feather="code"></i> Este subtítulo tiene que comentar un canvas</h3>
+                            <h3><i data-feather="thumbs-up"></i> Este subtítulo tiene que comentar un canvas</h3>
                             <p>
                                 Canvas también nos permite dibujar con texto. Pero aquí tenemos un elemento de HTML cuyas dimensiones no se ajustan automáticamente, y dentro del cual se programan gráficos tipo bitmap, generalmente, con JavaScript.
                             </p>
