--- a/skeleton.html
+++ b/skeleton.html
@@ -166,7 +166,7 @@
                     <div class="modal-header">
                         <h4 class="modal-title">Sobre nosotras…</h4>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <i data-feather="circle"></i>
+                            <i data-feather="user"></i>
                         </button>
                     </div>
                     <div class="modal-body row" id="team"><!--esto queda vacío, por ahora--></div>
