--- a/skeleton.html
+++ b/skeleton.html
@@ -23,9 +23,9 @@
                 <div class="container">
                     <div class="row py-5 align-items-center">
                         <div class="col-md-6 col-lg-7">
-                            <img loading="lazy" class="img-fluid bg-light d-md-none" src="img/parques-nacionales-chile-3.jpg" alt="describa la imagen" />
-                            <img loading="lazy" class="img-fluid bg-light d-none d-md-block d-lg-none" src="img/parques-nacionales-chile-3.jpg" alt="describa la imagen" />
-                            <img loading="lazy" class="img-fluid bg-light d-none d-lg-block" src="img/parques-nacionales-chile-3.jpg" alt="describa la imagen" />
+                            <img loading="lazy" class="img-fluid bg-light d-md-none" src="img/parques-nacionales-chile-3.jpg" alt="fotografía de un parque nacional de chile" />
+                            <img loading="lazy" class="img-fluid bg-light d-none d-md-block d-lg-none" src="img/parques-nacionales-chile-3.jpg" alt="fotografía de un parque nacional de chile" />
+                            <img loading="lazy" class="img-fluid bg-light d-none d-lg-block" src="img/parques-nacionales-chile-3.jpg" alt="fotografía de un parque nacional de chile" />
                         </div>
                         <div class="col-md-6 col-lg-5 p-4">
                             <h3><i data-feather="heart"></i> Áreas protegidas</h3>
