--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
                         </div>
                         <div class="col-md-6 col-lg-5 p-4">
-                            <h3><i data-feather="chevrons-left"></i>Animales domésticos afectan a especies en áreas protegidas de nuestro país</h3>
+                            <h3><i data-feather="frown"></i>Animales domésticos afectan a especies en áreas protegidas de nuestro país</h3>
                             <p>
                                 Los perros y los gatos son un peligro para la flora y fauna de las áreas silvestres por distintos motivos. Por un lado, sus instintos pueden llevarlos a atacar a otros animales en sus hábitats. Por otro lado al orinar y defecar pueden transmitirles a otros animales enfermedades.
                             </p>
