--- a/index.html
+++ b/index.html
@@ -177,9 +177,9 @@
                     </div>
                     <div class="col-md-4 mb-4">
                         <div class="card shadow-sm">
-                            <img src="img/ARTICULO.png" class="card-img-top" alt="fotografía de ua zona rural con perros y los carabineros de chile" />
+                            <img src="img/CONAF.png" class="card-img-top" alt="fotografía de ua zona rural con perros y los carabineros de chile" />
                             <div class="card-body">
-                                <a href="https://www.youtube.com/user/conafchile"> Infórmate más sobre temas de contaminación ambiental en las zonas silvestres de nuestro país por el canal de Youtube de la CONAF.</a>
+                                <a href="https://www.youtube.com/user/conafchile"> Infórmate más sobre temas de contaminación ambiental en las zonas silvestres de nuestro país.</a>
                             </div>
                         </div>
                     </div>
@@ -193,7 +193,7 @@
                     </div>
                     <div class="col-md-4 mb-4">
                         <div class="card shadow-sm">
-                            <img src="img/CONAF.png" class="card-img-top" alt="logo CONAF" />
+                            <img src="img/ARTICULO.png" class="card-img-top" alt="logo CONAF" />
                             <div class="card-body">
                                 <a href="https://www.conaf.cl/conaf-reitera-llamado-a-no-ingresar-con-mascotas-a-parques-nacionales-tras-muerte-de-zorro-culpeo/">Artículo 2019: “CONAF reitera llamado a no ingresar con mascotas a parques nacionales tras muerte de zorro culpeo”.</a>
                             </div>
