--- a/surface.html
+++ b/surface.html
@@ -136,8 +136,8 @@
                                 <!-- icono 11 -->
                                 <div class="col-6 col-sm-4 col-md-3 col-lg-2">
                                     <div class="card text-center text-dark bg-light shadow-sm mb-4">
-                                        <i data-feather="chevrons-left" class="mx-auto mt-4 mb-2"></i>
-                                        <p class="small">chevrons-left</p>
+                                        <i data-feather="frown" class="mx-auto mt-4 mb-2"></i>
+                                        <p class="small">frown</p>
                                     </div>
                                 </div>
                                 <!-- icono 12 -->
