--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="container">
                     <div class="row py-5 align-items-center">
                         <div class="col-md-6 col-lg-7">
-                            <img loading="lazy" class="img-fluid bg-light d-md-none" src="img/parques-nacionales-chile-3.jpg" alt="describa la imagen" />
+                            <img loading="lazy" class="img-fluid bg-light d-md-none" src="img/parques-nacionales-chile-3.jpg" alt="Paisaje altiplánico con volcán de fondo y una manada de vicuñas en el centro." />
                             <img loading="lazy" class="img-fluid bg-light d-none d-md-block d-lg-none" src="img/parques-nacionales-chile-3.jpg" alt="Paisaje altiplánico con volcán de fondo y una manada de vicuñas en el centro." />
                             <img loading="lazy" class="img-fluid bg-light d-none d-lg-block" src="img/parques-nacionales-chile-3.jpg" alt="Paisaje altiplánico con volcán de fondo y una manada de vicuñas en el centro." />
                         </div>
@@ -177,7 +177,7 @@
                     </div>
                     <div class="col-md-4 mb-4">
                         <div class="card shadow-sm">
-                            <img src="img/CONAF.png" class="card-img-top" alt="fotografía de ua zona rural con perros y los carabineros de chile" />
+                            <img src="img/CONAF.png" class="card-img-top" alt="Fotografía de una zona rural con perros y los carabineros de chile." />
                             <div class="card-body">
                                 <a href="https://www.youtube.com/user/conafchile"> Infórmate más sobre temas de contaminación ambiental en las zonas silvestres de nuestro país.</a>
                             </div>
@@ -185,7 +185,7 @@
                     </div>
                     <div class="col-md-4 mb-4">
                         <div class="card shadow-sm">
-                            <img src="img/FANZINE.png" class="card-img-top" alt="layout del fanzine" />
+                            <img src="img/FANZINE.png" class="card-img-top" alt="Previsualización del fanzine para el cuidado de zonas silvestres." />
                             <div class="card-body">
                                 <a href="https://drive.google.com/file/d/1IsB2cFMY9Fqihc4kyAYL32lNMiWLMios/view?usp=sharing"> ¡Descarga nuestro fanzine informativo sobre el impacto de los perros en las zonas silvestres!</a>
                             </div>
